--- a/com.airiny.tools.java.javacert/pom.xml
+++ b/com.airiny.tools.java.javacert/pom.xml
@@ -1,9 +1,28 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.airiny.java.tools</groupId>
-  <artifactId>javacert</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>JavaCert</name>
-  <description>Connect to SSL Services from Java when PKIX Path Building Failed</description>
-  
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.airiny.java.tools</groupId>
+	<artifactId>javacert</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>JavaCert</name>
+	<description>Connect to SSL Services from Java when PKIX Path Building Failed</description>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+		</dependency>
+	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+			</plugins>
+			</build>
 </project>
